third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-ref-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: zerocopy::Immutable` is not satisfied
  --> tests/ui-msrv/transmute-ref-dst-not-nocell.rs:23:33
   |
23 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::Immutable` is not implemented for `Dst`
   |
note: required by `AssertDstIsImmutable`
  --> tests/ui-msrv/transmute-ref-dst-not-nocell.rs:23:33
   |
23 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
